--- a/index.html
+++ b/index.html
@@ -4,28 +4,26 @@
 <head>
     <meta charset="utf-8">
     <title>Weather-App</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="style/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 
 <body>
-	  <div id="header">
-    <div class="left"><h1 id="currentLocation">Getting location....</h1></div>
-    <div class="navbar"></div>
-  <div class="right">Built by Andrew Reese</div>
-  </div>
-  <div id="container">
-    <h2 class="center-text content-title" id="currentTemp"></h2>
-    <div class="content-body">
-    <p id="high-low"></p>
-    <p id="currentWeather"></p>
- 
+    <div id="header">
+        <div class="left">
+            <h1 id="currentLocation">Getting location....</h1></div>
+        <div class="navbar"></div>
+        <div class="right">Built by Andrew Reese</div>
     </div>
-  </div>
-   <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
+    <div id="container">
+        <h2 class="center-text content-title" id="currentTemp"></h2>
+        <h6 class="center-text"><a href="#" id="toggle">Toggle C/F</a></h6>
+        <div class="content-body">
+            <p id="high-low"></p>
+            <p id="currentWeather"></p>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="javascript/logic.js"></script>
 </body>
 
